--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1160,3 +1160,6 @@
 +++ * see http://docs.jquery.com/Release:jQuery_1.3
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 --------------------------------------------------
+2009-04-01:zms-2.11.1-49
+[01172] Applied fix for missing keys in ZMSGlobals.tree_list() (requested by roc).
+--------------------------------------------------
